# git-automater

./: .gitignore  Cargo.toml  LICENSE  README.md  logs
.github/: dependabot.yml
src/: branches.rs  clone.rs  commits.rs  gitignore.rs  helpers.rs  license.rs  main.rs  operations.rs  remote.rs
