[package]
name = "git-automater"
version = "0.1.0"
edition = "2021"
keywords = ["git","command-line-utilities","version-control","license-generator"]
license = "MIT"
description = "Git Automater: Your Shortcut to Seamless Version Control!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dialoguer = { version = "0.11.0", features = ["fuzzy-select", "completion"] }
emojis = "0.6.1"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
