[package]
name = "git-automater"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/ShyamSundhar1411/git-automater/"
keywords = ["git","command-line-utility","version-control","license-generator"]
license = "MIT"
description = "Git Automater: Your Shortcut to Seamless Version Control!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.github]
repository = "ShyamSundhar1411/git-automater"
[dependencies]
chrono = "0.4.31"
dialoguer = { version = "0.11.0", features = ["fuzzy-select", "completion"] }
emojis = "0.6.1"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
